--- a/amplify.yml
+++ b/amplify.yml
@@ -3,6 +3,8 @@ frontend:
   phases:
     preBuild:
       commands:
+        - nvm install 24.3.0
+        - nvm use 24.3.0
         - npm ci
     build:
       commands:
