--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start:development": "ng serve --configuration development",
-    "build:development": "ng build --configuration development",
-    "start:production": "ng serve --configuration production",
-    "build:production": "ng build --configuration production",
-    "watch:development": "ng build --watch --configuration development",
+    "start:development": "ng serve --configuration=development --port 4200",
+    "build:development": "ng build --configuration=development",
+    "start:production": "ng serve --configuration=production --port 443",
+    "build:production": "ng build --configuration=production",
+    "watch:development": "ng build --watch --configuration=development",
     "test": "ng test"
   },
   "prettier": {
